# CuLudo

./: CMakeLists.txt  README.md  main.cu
player/: iPlayer.cuh  plauer_fast_agro.cuh  playerNN.cu  playerNN.cuh  player_fast_safe.cuh  player_logic.cuh  player_random.cuh
util/: cuda-exception.cuh  game.cu  game.cuh  settings.cuh  status.h
